# mmn_14_algo

./: .gitignore  CMakeLists.txt  README.txt
include/: common.h  heap.h  quick.h  retvals.h
src/: common.c  heap.c  input.c  main.c  quick.c
